fixed vertical alignment of label text and checkbox

--- a/src/components/SecondaryPanes/EventListeners.css
+++ b/src/components/SecondaryPanes/EventListeners.css
@@ -15,6 +15,14 @@
 	user-select: none;
 }
 
+.event-listener-group input[type="checkbox"] {
+	vertical-align: middle;
+}
+
+.event-listener-group span.event-listener-category {
+	vertical-align: middle;
+}
+
 .event-listeners-content .arrow {
 	margin-inline-end: 0;
 }
